Fixed main.py's ^C learning bug and update the data.yaml

--- a/data.yaml
+++ b/data.yaml
@@ -2,9 +2,11 @@
 Greeting:
   Triggers:
     - hello!
-    - Hello world!
+    - hello world!
     - hello!
     - hello
+    - hi
+    - hi!
   Responds:
     - Hello!
     - Nice to meet you!
